[package]
name = "asmdoc"
description = "Documentation generator for assembly projects"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
inform = "0.1.0"
linked-hash-map = "0.5.6"
logos = "0.14.1"
paste = "1.0.15"
serde = "1.0.208"
serde_toml = "0.0.1"
toml = "0.8.19"
walkdir = "2.5.0"

[build]
rustdocflags = ["-Zrustdoc-scrape-examples"]
